bugfixes and connected to websockets and now dynamically displaying on map with route for ongoing ride and show/hide selected/deselected drivers on map